--- a/projeto_calculadora/prt_3_add_bloc/web/manifest.json
+++ b/projeto_calculadora/prt_3_add_bloc/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "prt_2_funcionalidades",
-    "short_name": "prt_2_funcionalidades",
+    "name": "prt_3_add_bloc",
+    "short_name": "prt_3_add_bloc",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
